# money-way

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.sqlx/: query-054c2a9029cb27b590899d2bc79b57aae134404ac140fad5d0dff165bcf13c18.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-408c64b631e5d2c5896582f0b844badb6874ebdab4b8180bec7043bb088410b6.json  query-41050429d56f380f479194c75d1b4e92356c285a23e580e7afea2fa812f737e6.json  query-45442094cdff368c462dadb52c7a85134e56f8f87bf4372243508dd9d873eb45.json  query-461811510cb9d78388eabba3760c51b0fd91e64f93a6c92675b9eaccfd6ebea5.json  query-4f6a47b1a2f48dd8964f02581e7861c11062e59ad444f6c0e294904ba783b5f7.json  query-526edd29ba46b5ff37d8954503c38ae05cf469b4ba500a12f13f724bae0c17c1.json  query-67f26f169653a462c7c424287146c32c6be63d7345bdd5555470c5a04033819a.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-770542879242d8e486e99f24841f16e4cb406203814c88239746d42350cde3dc.json  query-7957d67e73e81af00750ee6907f2a875db7c9d459fcfa7d7c969027bc6b8f532.json  query-a4458e0e3681ca85d6a7eb104f93a1ef7a7e6182073a6990dfa0d524bad37f33.json  query-b35558d910c588cf04874f68e20c6ccb46072c19c7b90540aac10a8b34761517.json  query-c436910b523f0ab8e072c02a06e39f8fb101f99e63a19adfaeaeb869443f72d3.json  query-c8900c10a2feb80ae9762c7e2c798dd9f27320f374114a19474cebd0ba8b1fff.json  query-d3ebcf603400f4bd4bb401d5ddad4e80a66099be90f6deacc04d70f8450481ef.json  query-feee21457a96c17b2e853e4ffa6efc580b87301d0b7d5a0179347b5c4f3d95dc.json
(+24 files in other folders)
