[package]
name = "money-way"
version = "0.1.0"
edition = "2024"

# Improve compile times when using SQLx
[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4.10.2"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "chrono",
] }
tokio = { version = "1.44.0", features = ["full"] }
