[package]
name = "money-way"
version = "0.1.0"
edition = "2021"

# Improve compile times when using SQLx
[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-extensible-rate-limit = "0.4.0"
actix-web = "4.10.2"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.7"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "chrono",
] }
tokio = { version = "1.44.1", features = ["full"] }
